feat: expose phase2 logical resources
